# AQ-Prediction-Model

./: Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/scripts/: deploy_endpoint.sh  invoke_smoke.py  local_example.yaml
glue/: etl_job.py
pipelines/: sm_pipeline.py
registry/: register_model.py
scripts/: evaluate.py  package_model.py  train.py  train_sagemaker.py
src/aqi_ml/: config.py  ports.py
src/aqi_ml/data/: features.py  loader.py
src/aqi_ml/utils/: io.py  logging.py  time.py
src/model/: inference.py  registry.py  xgb_trainer.py
src/training/: pipeline.py
test/: test_features.py
training/: train_xgb.py
